# flappy

./: Cargo.toml  readme.md
src/: bird.rs  game_state.rs  main.rs  pipe.rs  render_pl.rs  tex_loader.rs
