[package]
name = "flappy"
version = "0.1.0"
authors = ["mobile-bungalow <pwmay@ucsc.edu>"]
edition = "2018"


[dependencies]
fps_counter = "1.0.0"

gfx = "0.17.0"
gfx_core = "0.8.0"
gfx_device_gl = "0.15.0"

pistoncore-input = "0.28.0"
piston_window = "0.99.0"
piston = "0.48.0"
piston2d-gfx_graphics = "0.61.0"  #https://crates.io/crates/piston2d-gfx_graphics
piston2d-sprite = "0.55.0"


shader_version = "0.6.0"
piston2d-graphics = "0.32.0"

rand = "0.6.5" # for pipe init

